hphp/hack/test/typecheck/constraints/tparam_class_variable_bad.php
<?hh // strict

function test<T>(classname<T> $c): void {
  $_ = $c::$doesNotExist;
}
